part-1/log-output/manifests/deployment.yaml
# log-output deployment: writer + reader containers sharing an emptyDir volume (ex 1.10)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
  labels:
    app: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-files
          emptyDir: {}
      containers:
        - name: log-output-writer
          image: ghcr.io/maxim955827848/log-output-writer:1.0
          volumeMounts:
            - name: shared-files
              mountPath: /usr/src/app/files
        - name: log-output-reader
          image: ghcr.io/maxim955827848/log-output-reader:1.0
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: shared-files
              mountPath: /usr/src/app/files
