part-1/log-output/manifests/service.yaml
# ClusterIP service for log-output reader (ex 1.05)
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - port: 2345
      targetPort: 3000
      protocol: TCP
